--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<nav>
+		<a href="/">Home</a>
+		<a href="/users/sign_up">Create an Account</a>
+		<% if current_user %>
+		<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
+		<% else %>
+		<a href="/users/sign_in">Sign In</a>
+		<% end %>
+	</nav>
 
 <%= yield %>
 
